<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/imageView_logo" />

    <EditText
        android:id="@+id/inputCEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="CEP"
        android:ems="10"
        android:hint="@string/cep_placeholder"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/button_find" />

    <TextView
        android:id="@+id/textViewCEPTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewCEPTitle"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:minHeight="20dp" />

    <TextView
        android:id="@+id/textViewStreetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewStreetTitle"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:minHeight="20dp" />

    <TextView
        android:id="@+id/textViewDistrictTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewDistrictTitle"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:minHeight="20dp" />

    <TextView
        android:id="@+id/textViewCityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewCityTitle"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:minHeight="20dp" />

    <TextView
        android:id="@+id/textViewStateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textViewStateTitle"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />
</LinearLayout>